Aside footer overflow issue fixed. Unnecessary console logs removed. Setting discount and partners moved to aside window. Code refactored - created ServiceHelper object. Added checkbox to toggle all services.

--- a/public/src/css/styles.css
+++ b/public/src/css/styles.css
@@ -56,3 +56,7 @@ input[type=checkbox].ng-invalid {
     outline: 1px solid #a94442;
     outline-offset: -1px;
 }
+
+.aside-footer {
+    clear: both;
+}
